Update Security and CORS configurations